--- a/hack/release.toml
+++ b/hack/release.toml
@@ -20,6 +20,8 @@ preface = """
         description = """\
 runc: 1.3.1
 Kubernetes: 1.34.1
+Linux: 6.12.48
+linux-firmware: 20250917
 
 Talos is built with Go 1.24.6.
 """
