fix: default gateway as string
According to the documentation, the default gateway can be specified using the string "default".

Signed-off-by: Serge Logvinov <serge.logvinov@sinextra.dev>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit e06a086989331f28406e8d4234e02d9a6b83f87d)

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/in-v2-cloud-init.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/in-v2-cloud-init.yaml
@@ -21,7 +21,7 @@ network:
       nameservers:
         search: [ foo.local, bar.local ]
       routes:
-        - to: "0.0.0.0/0"
+        - to: default
           via: "192.168.14.1"
           metric: 100
           on-link: true
