--- a/hack/release.toml
+++ b/hack/release.toml
@@ -25,6 +25,8 @@ cryptsetup: 2.8.1
 LVM2: 2_03_34
 systemd-udevd: 257.8
 runc: 1.3.1
+CoreDNS: 1.12.4
+etcd: 3.6.5
 
 Talos is built with Go 1.25.1.
 """
