fix: support secure HTTP proxy with gRPC dial
Most of the work is to add proper test environment for more cases.

Include a test for pulling an image

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -63,6 +63,7 @@ spec:
     - integration-provision-0
     - integration-provision-1
     - integration-provision-2
+    - integration-airgapped
     - integration-misc-0
     - integration-misc-1
     - integration-misc-1-enforcing
@@ -963,6 +964,75 @@ spec:
             artifactPath: /tmp/logs-*.tar.gz
             additionalArtifacts:
               - "/tmp/support-*.zip"
+    - name: integration-airgapped
+      buildxOptions:
+        enabled: true
+      depends:
+        - default
+      runnerGroup: large
+      crons:
+        - '30 5 * * *'
+      triggerLabels:
+        - integration/misc
+        - integration/airgapped
+        - integration/release-gate
+      steps:
+        - name: download-artifacts
+          conditions:
+            - not-on-schedule
+          artifactStep:
+            type: download
+            artifactName: talos-artifacts
+            artifactPath: _out
+        - name: ci-temp-release-tag
+          conditions:
+            - not-on-schedule
+        - name: build
+          conditions:
+            - only-on-schedule
+          command: talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer-base imager talos _out/integration-test-linux-amd64
+          environment:
+            PLATFORM: linux/amd64,linux/arm64
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+            PUSH: true
+        - name: talosctl-cni-bundle
+          conditions:
+            - only-on-schedule
+        - name: e2e-airgapped-http-proxy
+          command: e2e-qemu
+          withSudo: true
+          environment:
+            GITHUB_STEP_NAME: ${{ github.job}}-e2e-http-proxy
+            SHORT_INTEGRATION_TEST: yes
+            WITH_AIRGAPPED: http-proxy
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+        - name: e2e-airgapped-secure-proxy
+          command: e2e-qemu
+          withSudo: true
+          environment:
+            GITHUB_STEP_NAME: ${{ github.job}}-e2e-secure-proxy
+            SHORT_INTEGRATION_TEST: yes
+            WITH_AIRGAPPED: secure-http-proxy
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+        - name: e2e-airgapped-reverse-proxy
+          command: e2e-qemu
+          withSudo: true
+          environment:
+            GITHUB_STEP_NAME: ${{ github.job}}-e2e-reverse-proxy
+            SHORT_INTEGRATION_TEST: yes
+            WITH_AIRGAPPED: https-reverse-proxy
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+        - name: save-talos-logs
+          conditions:
+            - always
+          artifactStep:
+            type: upload
+            artifactName: talos-logs-integration-airgapped
+            disableExecutableListGeneration: true
+            artifactPath: /tmp/logs-*.tar.gz
+            additionalArtifacts:
+              - "/tmp/support-*.zip"
+              - "/tmp/airgapped*.log"
     - name: integration-misc-0
       buildxOptions:
         enabled: true
@@ -1081,14 +1151,6 @@ spec:
         - name: talosctl-cni-bundle
           conditions:
             - only-on-schedule
-        - name: e2e-airgapped
-          command: e2e-qemu
-          withSudo: true
-          environment:
-            GITHUB_STEP_NAME: ${{ github.job}}-e2e-airgapped
-            SHORT_INTEGRATION_TEST: yes
-            WITH_AIRGAPPED: true
-            IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: e2e-no-cluster-discovery
           command: e2e-qemu
           withSudo: true
@@ -1135,7 +1197,6 @@ spec:
             artifactPath: /tmp/logs-*.tar.gz
             additionalArtifacts:
               - "/tmp/support-*.zip"
-              - "/tmp/airgapped*.log"
     - name: integration-misc-1-enforcing
       buildxOptions:
         enabled: true
