--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,16 +18,17 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.16.9
+Linux: 6.17
 Kubernetes: 1.34.1
 CNI Plugins: 1.8.0
 cryptsetup: 2.8.1
 LVM2: 2_03_34
 systemd-udevd: 257.8
-runc: 1.3.1
+runc: 1.3.2
 CoreDNS: 1.12.4
 etcd: 3.6.5
 Flannel: 0.27.4
+Flannel CNI plugin: v1.8.0-flannel1
 
 Talos is built with Go 1.25.1.
 """
