--- a/hack/release.toml
+++ b/hack/release.toml
@@ -22,6 +22,8 @@ runc: 1.3.1
 Kubernetes: 1.34.1
 Linux: 6.12.48
 linux-firmware: 20250917
+CoreDNS: 1.12.4
+etcd: 3.6.5
 
 Talos is built with Go 1.24.6.
 """
