feat: support bootloader option for ISO
Support selecting bootloader option for ISO.

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/pkg/imager/profile/testdata/iso-amd64-1.12.0.yaml
+++ b/pkg/imager/profile/testdata/iso-amd64-1.12.0.yaml
@@ -15,4 +15,7 @@ input:
     imageRef: ghcr.io/siderolabs/installer-base:1.12.0
 output:
   kind: iso
+  isoOptions:
+    sdBootEnrollKeys: if-safe
+    bootloader: dual-boot
   outFormat: raw
