feat: implement bond multi-doc configuration
Also expand internal bond configuration to cover missing fields.
They are not going to be exposed in legacy configuration.

Fixes #10960

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/equinixmetal/testdata/expected-2bonds.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/equinixmetal/testdata/expected-2bonds.yaml
@@ -75,6 +75,7 @@ links:
         numPeerNotif: 1
         tlbLogicalLb: 1
         adActorSysPrio: 65535
+        missedMax: 2
       layer: platform
     - name: bond1
       logical: true
@@ -99,6 +100,7 @@ links:
         numPeerNotif: 1
         tlbLogicalLb: 1
         adActorSysPrio: 65535
+        missedMax: 2
       layer: platform
 routes:
     - family: inet4
