--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v1-pnap.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v1-pnap.yaml
@@ -50,6 +50,7 @@ links:
         numPeerNotif: 1
         tlbLogicalLb: 1
         adActorSysPrio: 65535
+        missedMax: 2
       layer: platform
     - name: bond0.2
       logical: true
