--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v2-serverscom.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v2-serverscom.yaml
@@ -69,6 +69,7 @@ links:
         numPeerNotif: 1
         tlbLogicalLb: 1
         adActorSysPrio: 65535
+        missedMax: 2
       layer: platform
     - name: aggi
       logical: true
@@ -93,6 +94,7 @@ links:
         numPeerNotif: 1
         tlbLogicalLb: 1
         adActorSysPrio: 65535
+        missedMax: 2
       layer: platform
 routes:
     - family: inet4
