--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v2.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v2.yaml
@@ -84,6 +84,7 @@ links:
         numPeerNotif: 1
         tlbLogicalLb: 1
         adActorSysPrio: 65535
+        missedMax: 2
       layer: platform
     - name: bond0.4
       logical: true
